--- a/HTML/new.html
+++ b/HTML/new.html
@@ -33,14 +33,14 @@
         <h2 class="h2">heading 2</h2>
     </main>
 
-    <style>
-        {
+    <script>
+        if(document.getElementById('mobile-nav').style.display = 'none'){
             document.getElementById('mobile-nav').style.display = 'block'
         } else {
             document.getElementById('mobile-nav').style.display = 'none'
         }
 
-    </style>
+    </script>
 
 </body>
 </html>
