--- a/Tesla/index.html
+++ b/Tesla/index.html
@@ -4,12 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
+    <title>Tesla</title>
 </head>
-<body>
-   <div class="parent">
-    <div class="header">
-        <span>TESLA</span>
+<body background="assets/images/Homepage-Model-S-Desktop-LHD.jfif">
+   <div class="parent flex">
+    <div class="header flex">
+        <div class="span">
+            <img src="assets/images/tesla-logo-png-20.png">
+        </div>
+        <div class="box1 flex">
+            <span>Model S</span>
+            <span>Model 3</span>
+            <span>Model X</span>
+            <span>Model Y</span>
+            <span>Solar Roof</span>
+            <span>Solar Panels</span>
+        </div>
+        <div class="box2 flex">
+            <span>Shop</span>
+            <span>Account</span>
+            <span>Menu</span>
+        </div>
+    </div>
+    <div class="middle">
+        <div class="name flex">
+            Model S
+        </div>
+        <div class="desc flex">
+            Schedule a Demo Drive
+        </div> 
+    </div>
+    <div class="bottom flex">
+        <div class="button1 flex">
+            Buy Now
+        </div>
+        <div class="button2 flex">
+            Custom Order
+        </div>
+
     </div>
    </div> 
 </body>
